--- a/lab01_exp/CMakeLists.txt
+++ b/lab01_exp/CMakeLists.txt
@@ -3,4 +3,4 @@ project(hse_numerical_methods_2024)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(hse_numerical_methods_2024 testexp.cpp exp.cpp)
+add_executable(hse_numerical_methods_2024 testexp.cpp exp.cpp ../lab02_pade_exp/testpade.cpp)
