--- a/lab03_Chebyshev/CMakeLists.txt
+++ b/lab03_Chebyshev/CMakeLists.txt
@@ -3,7 +3,7 @@ project(hse_numerical_methods_2024/lab03_Chebyshev)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(hse_numerical_methods_2024 Chebyshev.cpp testChebyshev.cpp)
+add_executable(hse_numerical_methods_2024 Chebyshev.cpp testChebyshev.cpp Chebyshev_using_built_in_funcs.cpp)
 
 find_package(GSL REQUIRED)
 target_link_libraries(hse_numerical_methods_2024 GSL::gsl GSL::gslcblas)
