--- a/lab05_differentiation/CMakeLists.txt
+++ b/lab05_differentiation/CMakeLists.txt
@@ -3,4 +3,4 @@ project(hse_numerical_methods_2024/lab04_differentiation)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(hse_numerical_methods_2024 differentiation.cpp differentiation.hpp)
+add_executable(hse_numerical_methods_2024 differentiation.cpp differentiation.hpp testderivative.cpp)
